--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "lucide-react": "^0.475.0",
-    "@google/genai": "0.21.0",
+    "@google/genai": "^0.1.0",
     "@supabase/supabase-js": "^2.48.1"
   },
   "devDependencies": {
